# graf-avanz-practica-1

./: CMakeLists.txt  README.md
images/: blend_example.ppm  brightness_example.ppm  quadrant_blend_example.ppm
include/: color.h  ray.h  vec3.h
src/: main.cpp
